Fix the overflow issue with the content and arrows

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13592,6 +13592,7 @@ footer hr {
   font-size: 24px;
   letter-spacing: 1.6px;
   position: relative;
+  border-bottom: 4px solid transparent;
 }
 .buttons-content-switch button.nav-link.active,
 .buttons-content-switch a.nav-link.active {
@@ -13692,6 +13693,7 @@ footer hr {
 .swiper-button-next,
 .swiper-button-prev {
   color: #000000 !important;
+  background-color: rgb(255, 255, 255);
 }
 .swiper-button-next:after,
 .swiper-button-prev:after {
